[metadata]
name = Bilu
version = 0.0.3
author = maikomjames
author_email = eu@maikom.com.br
description = Asynchronous ODM (Object Document Mapper) for MongoDB
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maikomjames/bilu
project_urls =
    Bug Tracker = https://github.com/maikomjames/bilu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
